--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "perform cruds with sqlite",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,6 +19,7 @@
   },
   "homepage": "https://github.com/mirzasaeed-es/rest-api#readme",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "sequelize": "^6.37.1",
     "sqlite3": "^5.1.7"
